update index with css link

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,10 @@
     <title>SAGGS PP</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- bootstrap css -->
+    <!-- bootstrap css
     <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
+    -->
+    <link href="saggs.css" rel="stylesheet" />
 </head>
 <body>
     <app>Loading...</app>
